Fixed issues after code analysis.